# create-oi

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  NOTICE  README.md  deny.toml  justfile
assets/midi/: README.md
crates/create-oi/: Cargo.toml
crates/create-oi-dora/: Cargo.toml  dataflow.yml
crates/create-oi-dora/examples/: dora_create_driver.rs
crates/create-oi-dora/src/: lib.rs  node.rs
crates/create-oi-embassy/: Cargo.toml  README.md
crates/create-oi-embassy/src/: lib.rs
crates/create-oi-protocol/: Cargo.toml  README.md
crates/create-oi-protocol/src/: command.rs  error.rs  lib.rs  opcode.rs  sensor.rs  stream.rs  types.rs
crates/create-oi-serial/: Cargo.toml  README.md
crates/create-oi-serial/examples/: basic.rs  basic_sync.rs  dock.rs  full.rs  leds_sync.rs  play_midi.rs  play_midi_sync.rs  round_sync.rs  schedule.rs  sensors.rs  songs_sync.rs  stream.rs
crates/create-oi-serial/src/: lib.rs
crates/create-oi-smol/: Cargo.toml  README.md
crates/create-oi-smol/examples/: basic.rs  basic_smol.rs  dock.rs  full.rs  leds.rs  play_midi.rs  play_midi_smol.rs  round_smol.rs  schedule.rs  sensors.rs  sensors_smol.rs  songs_smol.rs  stream.rs
crates/create-oi-smol/src/: lib.rs
crates/create-oi-tokio/: Cargo.toml  README.md
crates/create-oi-tokio/examples/: basic.rs  basic_tokio.rs  dock.rs  dock_tokio.rs  full.rs  leds.rs  play_midi.rs  play_midi_tokio.rs  schedule.rs  sensors.rs  sensors_tokio.rs  songs.rs  stream.rs
crates/create-oi-tokio/src/: lib.rs
crates/create-oi/src/: async_create.rs  async_robot.rs  create.rs  error.rs  lib.rs  midi.rs  mode.rs  robot.rs  transport.rs  types.rs
crates/create-oi/src/midi/: config.rs  events.rs  parse.rs  voice_reduce.rs
crates/create-oi/src/protocol/: command.rs  stream.rs
crates/create-oi/tests/: mock_async_create.rs  mock_async_robot.rs  mock_create.rs  mock_robot.rs
docs/: progress.md  testing-guide.md  verification.md
docs/architecture/: README.md
docs/user-inputs/: 003-20260420-1541-async-robot-and-docs.md  004-20260420-workspace-restructure.md  005-20260420-1729-protocol-crate-split.md  006-20260420-1846-radius-enum-redesign.md  007-20260720-nostd-embassy-support.md  008-20260720-oi-spec-compliance-review.md  README.md  initial-request.md  pure-rust-port-request.md
examples/: basic_sync.rs
libcreate-sys/: Cargo.toml  build.rs
libcreate-sys/csrc/: boost_compat.h  wrapper.cpp  wrapper.h
libcreate-sys/src/: lib.rs
src/: async_robot.rs  error.rs  io.rs  lib.rs  mode.rs  protocol.rs  robot.rs  sensor.rs  transport.rs  types.rs
src/io/: serial.rs  smol.rs  tokio.rs
src/protocol/: opcode.rs  sensor.rs
tests/: mock_async_robot.rs  mock_robot.rs  robot_integration.rs
tools/: gb2midi.rs
