[workspace]
resolver = "3"
members = [
    "crates/create-oi-protocol",
    "crates/create-oi",
    "crates/create-oi-serial",
    "crates/create-oi-tokio",
    "crates/create-oi-smol",
    "crates/create-oi-dora",
]
default-members = [
    "crates/create-oi-protocol",
    "crates/create-oi",
    "crates/create-oi-serial",
    "crates/create-oi-tokio",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Sanzentyo/create-oi"
rust-version = "1.85"

[workspace.dependencies]
create-oi-protocol = { path = "crates/create-oi-protocol", default-features = false }
create-oi = { path = "crates/create-oi" }
thiserror = "2"
serialport = "4.9"
tokio = { version = "1", features = ["io-util", "time", "rt"] }
tokio-serial = "5.4"
smol = "2"
async-io = "2"
futures-io = "0.3"
