[package]
name = "create-oi-protocol"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Sans-IO wire protocol for the iRobot Create/Roomba Open Interface — encoding, decoding, and stream framing"
keywords = ["irobot", "create", "roomba", "protocol", "sans-io"]
categories = ["embedded", "no-std::no-alloc"]

[dependencies]
thiserror.workspace = true
