[package]
name = "create-oi-serial"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Synchronous serial transport for create-oi (iRobot Create/Roomba)"
keywords = ["irobot", "create", "roomba", "serial"]
categories = ["hardware-support"]

[dependencies]
create-oi.workspace = true
serialport.workspace = true

[dev-dependencies]
create-oi = { workspace = true }

[[example]]
name = "basic_sync"
path = "examples/basic_sync.rs"
