[package]
name = "create-oi-serial"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Synchronous serial transport for create-oi (iRobot Create/Roomba)"
keywords = ["irobot", "create", "roomba", "serial"]
categories = ["hardware-support"]

[dependencies]
create-oi = { workspace = true, features = ["std"] }
serialport.workspace = true

[features]
midi = ["create-oi/midi"]

[dev-dependencies]
create-oi = { workspace = true, features = ["std"] }

[[example]]
name = "basic_sync"
path = "examples/basic_sync.rs"

[[example]]
name = "dock_sync"
path = "examples/dock_sync.rs"

[[example]]
name = "leds_sync"
path = "examples/leds_sync.rs"

[[example]]
name = "songs_sync"
path = "examples/songs_sync.rs"

[[example]]
name = "full_sync"
path = "examples/full_sync.rs"

[[example]]
name = "stream_sync"
path = "examples/stream_sync.rs"

[[example]]
name = "sensors_sync"
path = "examples/sensors_sync.rs"

[[example]]
name = "schedule_sync"
path = "examples/schedule_sync.rs"

[[example]]
name = "play_midi_sync"
path = "examples/play_midi_sync.rs"
required-features = ["midi"]

