[package]
name = "create-oi-serial"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Synchronous serial transport for create-oi (iRobot Create/Roomba)"
keywords = ["irobot", "create", "roomba", "serial"]
categories = ["hardware-support"]

[dependencies]
create-oi = { workspace = true, features = ["std"] }
serialport.workspace = true

[features]
midi = ["create-oi/midi"]

[dev-dependencies]
create-oi = { workspace = true, features = ["std"] }
clap = { version = "4.6.1", features = ["derive"] }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "dock"
path = "examples/dock.rs"

[[example]]
name = "leds"
path = "examples/leds.rs"

[[example]]
name = "songs"
path = "examples/songs.rs"

[[example]]
name = "full"
path = "examples/full.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"

[[example]]
name = "sensors"
path = "examples/sensors.rs"

[[example]]
name = "schedule"
path = "examples/schedule.rs"

[[example]]
name = "play_midi"
path = "examples/play_midi.rs"
required-features = ["midi"]

