[package]
name = "create-oi-smol"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Smol async transport for create-oi (iRobot Create/Roomba) — experimental"
keywords = ["irobot", "create", "roomba", "smol", "async"]
categories = ["hardware-support", "asynchronous"]
publish = false  # stub — not ready for crates.io

[dependencies]
create-oi = { workspace = true, features = ["std"] }
smol.workspace = true
serialport.workspace = true

[[example]]
name = "basic_smol"
required-features = []

[[example]]
name = "stream_smol"
required-features = []

[[example]]
name = "leds_smol"
required-features = []

[[example]]
name = "songs_smol"
required-features = []

[[example]]
name = "full_smol"
required-features = []

[[example]]
name = "sensors_smol"
required-features = []

[[example]]
name = "schedule_smol"
required-features = []

[[example]]
name = "dock_smol"
required-features = []

