[package]
name = "create-oi-smol"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Smol async transport for create-oi (iRobot Create/Roomba)"
keywords = ["irobot", "create", "roomba", "smol", "async"]
categories = ["hardware-support", "asynchronous"]
publish = false  # stub — not ready for crates.io

[dependencies]
create-oi = { workspace = true, features = ["std"] }
smol.workspace = true
serialport.workspace = true

[features]
midi = ["create-oi/midi"]

[dev-dependencies]
clap = { version = "4.6.1", features = ["derive"] }

[[example]]
name = "basic"
required-features = []

[[example]]
name = "stream"
required-features = []

[[example]]
name = "leds"
required-features = []

[[example]]
name = "songs"
required-features = []

[[example]]
name = "full"
required-features = []

[[example]]
name = "sensors"
required-features = []

[[example]]
name = "schedule"
required-features = []

[[example]]
name = "dock"
required-features = []

[[example]]
name = "play_midi"
required-features = ["midi"]

