[package]
name = "create-oi-tokio"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tokio async transport for create-oi (iRobot Create/Roomba)"
keywords = ["irobot", "create", "roomba", "tokio", "async"]
categories = ["hardware-support", "asynchronous"]
readme = "README.md"

[dependencies]
create-oi = { workspace = true, features = ["std"] }
tokio.workspace = true
tokio-serial.workspace = true

[features]
midi = ["create-oi/midi"]

[dev-dependencies]
create-oi = { workspace = true, features = ["std"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
clap = { version = "4.6.1", features = ["derive"] }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"

[[example]]
name = "leds"
path = "examples/leds.rs"

[[example]]
name = "songs"
path = "examples/songs.rs"

[[example]]
name = "full"
path = "examples/full.rs"

[[example]]
name = "sensors"
path = "examples/sensors.rs"

[[example]]
name = "schedule"
path = "examples/schedule.rs"

[[example]]
name = "dock"
path = "examples/dock.rs"

[[example]]
name = "play_midi"
path = "examples/play_midi.rs"
required-features = ["midi"]

