[package]
name = "create-oi"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "iRobot Create/Roomba Open Interface — TypeState robot API with transport abstraction"
keywords = ["irobot", "create", "roomba", "robot", "protocol"]
categories = ["hardware-support", "embedded"]

[features]
default = ["std"]
std = ["alloc", "create-oi-protocol/std"]
alloc = ["create-oi-protocol/alloc"]
midi = ["alloc", "dep:midly"]

[dependencies]
create-oi-protocol.workspace = true
libm = "0.2"
midly = { version = "0.5", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
